[package]
name = "bethere"
version = "0.1.0"
authors = ["Andrés Villalobos <andresalvivar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
walkdir = "2.3.1"
# druid = "0.7.0"
# clap = "2.33.3"
